# agentbuilder

./: .env.example  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: action.rst  client.rst  code-execution.rst  index.rst  loop.rst  planner.rst  sandbox.rst  server.rst  tools.rst  utils.rst
docs/concepts/: architecture.rst  execution-model.rst  index.rst  tool-system.rst
docs/examples/: calculator.rst  code-agent.rst  index.rst  multi-agent.rst  served-agent.rst
docs/guides/: code-agents.rst  conversation-management.rst  custom-tools.rst  index.rst  multi-agent.rst  serving-agents.rst  tool-calling-agents.rst
examples/: README.md
examples/code_agent/: README.md  code_agent.py
examples/multi_agent/: README.md  multi_agent.py
examples/served_agent/: README.md  client.py  server.py
examples/simple_calculator/: .env.example  README.md  calculator_agent.py
src/agentbuilder/: __init__.py  utils.py
src/agentbuilder/Action/: __init__.py  base.py
src/agentbuilder/Client/: __init__.py  base.py  openai_client.py
src/agentbuilder/Loop/: __init__.py  base.py
src/agentbuilder/Planner/: __init__.py  base.py
src/agentbuilder/Sandbox/: __init__.py  _repl_server.py  base.py  docker_sandbox.py
src/agentbuilder/Server/: __init__.py  base.py
src/agentbuilder/Tools/: __init__.py  agent_tool.py  base.py  code_execution.py  remote_agent_tool.py
tests/: README.md  __init__.py  conftest.py  test_action.py  test_agent_tool.py  test_client.py  test_code_execution.py  test_error_scenarios.py  test_loop.py  test_planner.py  test_remote_agent_tool.py  test_sandbox.py  test_server.py  test_tools.py  test_utils.py
