[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbuilder"
version = "0.0.0"
description = "A flexible framework for building agentic AI systems with tool orchestration"
readme = "README.md"
license = {text = "CC BY-SA 4.0"}
authors = [
    { name = "Rishi Sharma" }
]
requires-python = ">=3.9"
dependencies = [
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
]
code = [
    "docker>=7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "isort>=6.0.0",
    "black>=25.1.0",
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Documentation = "https://agentbuilder.readthedocs.io"
Repository = "https://github.com/rishi-s8/agentbuilder"
Issues = "https://github.com/rishi-s8/agentbuilder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=agentbuilder",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
